umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_culgi_04.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 26
sum_formula: C6H15N4O2+1
graph6: ZhGK?C@?K?O?O?O???????_?A??A??????O??C??O??C?E????@?G?O????G
