umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_openbabel_razinger_fig1_m.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 52
bond_count: 60
sum_formula: C52
graph6: si_GGE@?_?_@?@?__?_?@??C??G?GH?????@???G???c??@???C????_???G???@???CC????_????G????C????@????GG_?????????@?????@??????a?????G?????C??????C??????G??????G?????CC??????C???????G???????_??????@??????@@??A????????????@?????A???
